@@ -247,7 +247,10 @@ class Entry(gtk.Entry, WidgetMixinSupportValidation):
         mode = self._entry_mode
         if mode == ENTRY_MODE_TEXT:
             value = self.get_text()
-            if value == '':
+            # Ths is probably a hack, when empty:
+            #   * For string types and subclasses return ''
+            #   * Everything else return None
+            if not issubclass(self._data_type, str) and value == '':
                 return None
         elif mode == ENTRY_MODE_DATA:
             value = self._current_object
