@@ -1,5 +1,8 @@
 2005-11-08  Johan Dahlin  <jdahlin@async.com.br>
 
+	* kiwi/ui/widgets/entry.py (Entry.read): Add a hack to try to fix validation
+	for empty entries.
+
 	* kiwi/controllers.py (BaseController.__init__): Add support for automatic
 	keyboard accelerators of type key_name or key_modifier_name.
 
